スプレッドシートのデータを更新

--- a/src/config.json
+++ b/src/config.json
@@ -3,7 +3,7 @@
   "description": "ルナデンタルラボ",
   "form_url": "",
   "logo_image_url": "https://geoloniamaps.github.io/pwamap/icon-pwamap.svg",
-  "background_image_url": "https://geoloniamaps.github.io/pwamap/geolonia_bgimage_1920_1080.png",
+  "background_image_url": "",
   "primary_color": "#d2691e",
   "orderby": "distance"
 }
